<resources>
    <string name="app_name">Mentor Connect</string>
    <string name="sign_up">Sign Up</string>
    <string name="firstname">firstName</string>
    <string name="email">Email</string>
    <string name="id">id</string>
    <string name="user_name">User Name</string>
    <string name="password">PassWord</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username">UserName</string>
    <string name="last_name">Last Name</string>
    <string name="already_have_an_account">Already have an account?</string>
</resources>